<resources>
    <string name="app_name">Mobilit</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="signin">Sign In</string>
    <string name="signup">Sign Up</string>
    <string name="notRegistered">Not Registered?</string>
    <string name="Registered">Already registered?</string>
    <string name="signUp">Sign Up</string>
    <string name="facebook_icon">Facebook Icon</string>
    <string name="twitter_icon">Twitter Icon</string>
    <string name="google_icon">Google Icon</string>
    <string name="forgot_email">Forgot your password?</string>
    <string name="logIn">Or Log In with</string>
    <string name="facebook_app_id">154834031838581</string>
    <string name="fb_login_protocol_scheme">fb154834031838581</string>
    <string name="com.twitter.sdk.android.CONSUMER_KEY">4rkaffjm9TiohWcEr7rjsjp74</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET">W1cmCY2u4xST63yikqBl6rXeRqazC8yBKsNDH2gVfYJnVvgRNR</string>
</resources>
