<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ildev.mobilit.UserActivity">

    <TextView
        android:id="@+id/AppNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@android:color/holo_purple"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.035" />

    <EditText
        android:id="@+id/EditTextEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/rectangle"
        android:drawablePadding="16dp"
        android:drawableStart="@drawable/ic_email_black"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:labelFor="@+id/EditTextEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AppNameTextView" />

    <EditText
        android:id="@+id/EditTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/rectangle"
        android:drawablePadding="16dp"
        android:drawableStart="@drawable/ic_lock_black_24dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:labelFor="@+id/EditTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditTextEmail" />

    <Button
        android:id="@+id/ButtonSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/btn_rectangle"
        android:padding="16dip"
        android:text="@string/signin"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditTextPassword" />

    <TextView
        android:id="@+id/TextViewNotRegistered"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:text="@string/notRegistered"
        app:layout_constraintStart_toStartOf="@+id/EditTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/ButtonSignIn" />

    <TextView
        android:id="@+id/TextViewSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/signUp"
        android:textColor="@android:color/holo_blue_light"
        app:layout_constraintBaseline_toBaselineOf="@+id/TextViewNotRegistered"
        app:layout_constraintEnd_toEndOf="@+id/EditTextPassword"
        app:layout_constraintHorizontal_bias="0.033"
        app:layout_constraintStart_toEndOf="@+id/TextViewNotRegistered" />

    <GridLayout
        android:id="@+id/GridLayoutIcons"
        android:layout_width="166dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:background="@android:color/white"
        android:columnCount="3"
        android:rowCount="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ButtonSignIn">


        <ImageButton
            android:id="@+id/imageButtonGoogle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:contentDescription="@string/google_icon"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            app:srcCompat="@drawable/common_google_signin_btn_icon_light"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="308dp" />

        <ImageButton
            android:id="@+id/imageButtonFacebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:contentDescription="@string/facebook_icon"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            app:srcCompat="@drawable/ic_facebook" />

        <ImageButton
            android:id="@+id/imageButtonTwitter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:contentDescription="@string/twitter_icon"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            app:srcCompat="@drawable/ic_twitter" />
    </GridLayout>


</android.support.constraint.ConstraintLayout>
